Fixed gap between inputs in register page and compiling issues

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -12,7 +12,7 @@
 .loginContainer {
     grid-column: 5/9;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     margin-top: 10vh;
